# Final_Year_Major_Project

./: .gitignore  LAUNCH_GUIDE.md  Plan.md  README.md  STATUS.md  demo_ablation.ipynb  demo_narrative.ipynb  pyproject.toml  requirements.txt  test_integration.py
.github/: copilot-instructions.md
backend/: config.py  main.py
backend/api/: __init__.py  routes.py  session.py  websocket.py
backend/engine/: analytics.py  combat.py  difficulty.py  event_log.py  events.py  game_engine.py  narration.py  playthrough_logger.py  shock_manager.py  world.py
backend/llm/: __init__.py  fallback.py  guardrails.py  llm_service.py  prompts.py
backend/npc/: __init__.py  dialogue.py  interactions.py  knowledge.py  npc.py  personality.py  rl_agent.py  schedule.py
backend/player/: actions.py  input_parser.py  player.py
backend/quest/: __init__.py  checkpoint.py  mdp.py  nudge.py  quest_manager.py
backend/tests/: __init__.py  test_analytics.py  test_integration_smoke.py  test_seed_reproducibility.py  test_shock_engine.py  test_step3_step4_features.py
backend/tools/: __init__.py  export_narrative.py  generate_report_figures.py  playtest_bot.py  replay.py  reward_pooling_report.py  run_experiment.py
docs/: MDP_Architecture.md  README.md
docs/Journal/: abstract.tex  arxiv.sty  conclusion.tex  experimental_design.tex  implementation.tex  introduction.tex  main.tex  problem_formulation.tex  (+3 more)
frontend/: index.html
report/: main.tex  references.bib  sarthak_main.tex  shaurya_main.tex
scripts/: convergence_sweep.py  play_terminal.py  quality_check.py  test_quest_flow.py
(+27 files in other folders)
