[project]
name = "mvp-research-game"
version = "0.1.0"
description = "Single-session MVP research game (MDP + RL + optional LLM provider integration)."
readme = "Plan.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.136.0",
  "uvicorn[standard]==0.45.0",
  "websockets==16.0",
  "pydantic==2.13.3",
  "spacy==3.8.14",
  "numpy==2.4.4",
  "jsonschema==4.26.0",
  "python-multipart==0.0.26",
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0"
]

[tool.uv]
package = false

