[project]
name = "mvp-research-game"
version = "0.1.0"
description = "Single-session MVP research game (MDP + RL + optional LLM provider integration)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=15,<17",
  "pydantic>=2.10,<3",
  "spacy>=3.8,<4",
  "numpy>=2.1,<3",
  "jsonschema>=4.23,<5",
  "python-multipart>=0.0.20",
  "httpx>=0.28,<1",
  "matplotlib>=3.9,<4",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "jupyter>=1.1,<2",
  "ipykernel>=6.29,<7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

